# --------------------------------------------------------------
#  bit
#
#  provides:
#    bit.lua
#    bit/vendor.so
# --------------------------------------------------------------
set(MODULE_NAME bit)
set(target ${MODULE_NAME})

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  vendor
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  


